Fix release notes