@@ -5,15 +5,16 @@ import com.clele.parts.model.AppUser;
 import com.clele.parts.repository.AppUserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.support.PathMatchingResourcePatternResolver;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
@@ -25,25 +26,20 @@ import java.util.regex.Pattern;
 @Slf4j
 public class ChangesService {
 
-    @Value("${app.changes.dir:./changes}")
-    private String changesDir;
+    private static final String CLASSPATH_PATTERN = "classpath:changes/*.html";
 
     private final CurrentUserService currentUserService;
     private final AppUserRepository userRepository;
 
-    /** Matches relative img src (not already absolute or root-relative). Group 1 = prefix up to src value, group 2 = optional "./", group 3 = filename, group 4 = closing quote. */
+    /** Matches relative img src (not already absolute or root-relative). */
     private static final Pattern IMG_SRC = Pattern.compile(
             "(<img\\b[^>]*?\\ssrc=[\"'])(?!https?://|/)(\\./)?(\\S[^\"']*?)([\"'])",
             Pattern.CASE_INSENSITIVE | Pattern.DOTALL);
 
     /** Returns the 8-digit date of the newest changelog entry, or null if there are none. */
     public String getLatestDate() {
-        File dir = new File(changesDir);
-        if (!dir.exists() || !dir.isDirectory()) return null;
-        File[] files = dir.listFiles(f -> f.isFile() && f.getName().matches("\\d{8}\\.html"));
-        if (files == null || files.length == 0) return null;
-        return Arrays.stream(files)
-                .map(f -> f.getName().replace(".html", ""))
+        return Arrays.stream(listResources())
+                .map(r -> r.getFilename().replace(".html", ""))
                 .max(Comparator.naturalOrder())
                 .orElse(null);
     }
@@ -52,20 +48,16 @@ public class ChangesService {
         AppUser user = currentUserService.current();
         String lastRead = user.getLastReadChanges();
 
-        File dir = new File(changesDir);
-        if (!dir.exists() || !dir.isDirectory()) {
+        Resource[] resources = listResources();
+        if (resources.length == 0) {
             return new UnreadChangesDTO("", null, 0);
         }
 
-        File[] files = dir.listFiles(f -> f.isFile() && f.getName().matches("\\d{8}\\.html"));
-        if (files == null || files.length == 0) {
-            return new UnreadChangesDTO("", null, 0);
-        }
-
-        List<File> unread = Arrays.stream(files)
-                .sorted(Comparator.comparing(File::getName))
-                .filter(f -> {
-                    String date = f.getName().replace(".html", "");
+        List<Resource> unread = Arrays.stream(resources)
+                .filter(r -> r.getFilename() != null && r.getFilename().matches("\\d{8}\\.html"))
+                .sorted(Comparator.comparing(Resource::getFilename))
+                .filter(r -> {
+                    String date = r.getFilename().replace(".html", "");
                     return lastRead == null || date.compareTo(lastRead) > 0;
                 })
                 .toList();
@@ -74,15 +66,14 @@ public class ChangesService {
             return new UnreadChangesDTO("", null, 0);
         }
 
-        String latestDate = unread.getLast().getName().replace(".html", "");
+        String latestDate = unread.getLast().getFilename().replace(".html", "");
 
         StringBuilder html = new StringBuilder();
-        for (File f : unread) {
-            String date = f.getName().replace(".html", "");
-            String formatted = formatDate(date);
+        for (Resource r : unread) {
+            String date = r.getFilename().replace(".html", "");
             html.append("<div class=\"changelog-entry\">");
-            html.append("<h3 class=\"changelog-date\">").append(formatted).append("</h3>");
-            html.append(rewriteImageSrc(readFile(f)));
+            html.append("<h3 class=\"changelog-date\">").append(formatDate(date)).append("</h3>");
+            html.append(rewriteImageSrc(readResource(r)));
             html.append("</div>");
         }
 
@@ -100,25 +91,36 @@ public class ChangesService {
         if (filename.contains("..") || filename.contains("/") || filename.contains("\\")) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invalid filename");
         }
-        File file = new File(changesDir, filename);
-        if (!file.exists() || !file.isFile()) {
+        Resource resource = new PathMatchingResourcePatternResolver()
+                .getResource("classpath:changes/" + filename);
+        if (!resource.exists()) {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Image not found: " + filename);
         }
-        return Files.readAllBytes(file.toPath());
+        try (InputStream in = resource.getInputStream()) {
+            return in.readAllBytes();
+        }
+    }
+
+    private Resource[] listResources() {
+        try {
+            return new PathMatchingResourcePatternResolver().getResources(CLASSPATH_PATTERN);
+        } catch (IOException e) {
+            log.warn("Could not list changelog resources: {}", e.getMessage());
+            return new Resource[0];
+        }
     }
 
     private String rewriteImageSrc(String html) {
-        Matcher m = IMG_SRC.matcher(html);
-        return m.replaceAll(mr ->
+        return IMG_SRC.matcher(html).replaceAll(mr ->
                 Matcher.quoteReplacement(mr.group(1) + "/api/changes/images/" + mr.group(3) + mr.group(4)));
     }
 
-    private String readFile(File f) {
-        try {
-            return Files.readString(f.toPath());
+    private String readResource(Resource r) {
+        try (InputStream in = r.getInputStream()) {
+            return new String(in.readAllBytes(), StandardCharsets.UTF_8);
         } catch (IOException e) {
-            log.warn("Could not read changelog file {}: {}", f.getName(), e.getMessage());
-            return "<!-- Error reading " + f.getName() + " -->";
+            log.warn("Could not read changelog resource {}: {}", r.getFilename(), e.getMessage());
+            return "<!-- Error reading " + r.getFilename() + " -->";
         }
     }
 
@@ -126,9 +128,9 @@ public class ChangesService {
     private String formatDate(String date) {
         if (date == null || date.length() != 8) return date;
         try {
-            int year = Integer.parseInt(date.substring(0, 4));
+            int year  = Integer.parseInt(date.substring(0, 4));
             int month = Integer.parseInt(date.substring(4, 6));
-            int day = Integer.parseInt(date.substring(6, 8));
+            int day   = Integer.parseInt(date.substring(6, 8));
             String[] months = {"January","February","March","April","May","June",
                     "July","August","September","October","November","December"};
             return months[month - 1] + " " + day + ", " + year;
